--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "type": "module",
   "scripts": {
     "build": "pnpm -r --filter {packages} run build",
-    "dev": "pnpm -r --parallel --filter {packages} run dev"
+    "dev": "pnpm -r --parallel --filter {packages} run dev",
+    "test": "vitest -r test/basic",
+    "test:all": "cross-env pnpm -r --stream run test --",
+    "test:ci": "cross-env CI=true pnpm -r --stream run test --"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.1",
+    "cross-env": "^7.0.3",
+    "execa": "^6.0.0",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.7.2",
     "typescript": "^4.5.3",
     "vite": "^2.7.1",
-    "vitest": "latest"
+    "vitest": "^0.0.97"
   }
 }
