--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "pnpm -r --parallel --filter {packages} run dev",
     "test": "vitest -r test/basic",
     "test:all": "cross-env pnpm -r --stream run test --",
-    "test:ci": "cross-env CI=true pnpm -r --stream run test --"
+    "test:ci": "cross-env CI=true pnpm -r --stream run test --",
+    "typecheck": "pnpm -r --parallel run typecheck",
+    "lint":"echo TODO"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.8",
@@ -17,6 +19,7 @@
     "@rollup/plugin-node-resolve": "^13.1.1",
     "cross-env": "^7.0.3",
     "execa": "^6.0.0",
+    "rimraf": "^3.0.2",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.7.2",
     "typescript": "^4.5.3",
