--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:all": "cross-env pnpm -r --stream run test --",
     "test:ci": "cross-env CI=true pnpm -r --stream run test --",
     "typecheck": "pnpm -r --parallel run typecheck",
-    "lint":"echo TODO"
+    "lint": "echo TODO"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.8",
@@ -20,6 +20,7 @@
     "cross-env": "^7.0.3",
     "execa": "^6.0.0",
     "rimraf": "^3.0.2",
+    "rollup": "^2.61.1",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.7.2",
     "typescript": "^4.5.3",
