--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -28,6 +28,8 @@
   },
   "homepage": "https://github.com/aslemammad/vite-plugin-cloudflare#readme",
   "devDependencies": {
+    "@types/rollup-plugin-node-builtins": "^2.1.2",
+    "@types/rollup-plugin-node-globals": "^1.4.1",
     "typescript": "^4.5.3",
     "vite": "2.7.0"
   },
@@ -38,6 +40,11 @@
     "node": ">=14.0.0"
   },
   "dependencies": {
-    "cac": "^6.7.12"
+    "buffer-es6": "^4.9.3",
+    "cac": "^6.7.12",
+    "esbuild": "^0.14.6",
+    "process-es6": "^0.11.6",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0"
   }
 }
