--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "rollup-plugin-esbuild": "^4.7.2",
     "typescript": "^4.5.3",
     "vite": "^2.7.1",
-    "vitest": "^0.0.97"
+    "vitest": "^0.0.97",
+    "buffer-es6": "^4.9.3",
+    "process-es6": "^0.11.6"
   }
 }
