--- a/test/cloudflare-workers/wrangler.toml
+++ b/test/cloudflare-workers/wrangler.toml
@@ -1,3 +1,6 @@
 # wrangler.toml
-[build.upload]
-format = "modules"
+name = "vite-ssr-worker"
+
+[site]
+bucket = "./dist/client"
+entry-point = "./worker"
