--- a/package.json
+++ b/package.json
@@ -17,16 +17,18 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.1",
+    "buffer-es6": "^4.9.3",
     "cross-env": "^7.0.3",
     "execa": "^6.0.0",
+    "process-es6": "^0.11.6",
+    "puppeteer": "^13.0.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.61.1",
     "rollup-plugin-dts": "^4.0.1",
     "rollup-plugin-esbuild": "^4.7.2",
     "typescript": "^4.5.3",
+    "utility-types": "^3.10.0",
     "vite": "^2.7.1",
-    "vitest": "^0.0.97",
-    "buffer-es6": "^4.9.3",
-    "process-es6": "^0.11.6"
+    "vitest": "^0.0.97"
   }
 }
