--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "utility-types": "^3.10.0",
     "vite": "^2.7.1",
     "vitest": "^0.0.97"
+  },
+  "dependencies": {
+    "miniflare": "^1.4.1"
   }
 }
