--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -55,6 +55,7 @@
     "cac": "^6.7.12",
     "esbuild": "^0.14.6",
     "mlly": "^0.3.16",
+    "picocolors": "^1.0.0",
     "process-es6": "^0.11.6",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
