--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -54,6 +54,7 @@
     "buffer-es6": "^4.9.3",
     "cac": "^6.7.12",
     "esbuild": "^0.14.6",
+    "miniflare": "^1.4.1",
     "mlly": "^0.3.16",
     "picocolors": "^1.0.0",
     "process-es6": "^0.11.6",
