--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 14] # 14
+        node-version: [16.7.x]
         os: [ubuntu-latest, windows-latest, macos-latest] # mac
       fail-fast: false
 
@@ -41,8 +41,11 @@ jobs:
       - name: Build
         run: pnpm run build
 
-      - name: Test
-        run: pnpm run test:ci
+      - name: Test Miniflare@1
+        run: pnpm run test:ci:1
+
+      - name: Test Miniflare@2
+        run: pnpm run test:ci:2
 
       - name: Lint
         run: pnpm run lint --if-present
