feat: miniflare 2 support

--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dev": "pnpm -r --parallel --filter {packages} run dev",
     "test:core": "vitest -r test/basic",
     "test:all": "cross-env pnpm -r --stream run test --",
-    "test:ci": "cross-env CI=true pnpm -r --stream run test --",
+    "test:ci:1": "esmo scripts/miniflare.ts ^1 && cross-env CI=true pnpm -r --stream run test --",
+    "test:ci:2": "esmo scripts/miniflare.ts ^2 && cross-env CI=true pnpm -r --stream run test --",
     "typecheck": "pnpm -r --parallel run typecheck",
     "lint": "echo TODO"
   },
   "devDependencies": {
+    "@antfu/install-pkg": "^0.1.0",
     "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
@@ -20,6 +22,9 @@
     "@types/shelljs": "^0.8.10",
     "buffer-es6": "^4.9.3",
     "cross-env": "^7.0.3",
+    "esbuild": "^0.14.6",
+    "esbuild-node-loader": "^0.6.5",
+    "esno": "^0.14.1",
     "execa": "^6.0.0",
     "kill-port": "^1.6.1",
     "process-es6": "^0.11.6",
