--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -59,7 +59,8 @@
     "miniflare": "^2.3.0",
     "setimmediate": "^1.0.5",
     "typescript": "^4.5.3",
-    "vite": "2.7.0"
+    "vite": "2.7.0",
+    "vite-plugin-cloudflare": "workspace:^0.1.1",
   },
   "peerDependencies": {
     "miniflare": "*",
@@ -78,7 +79,6 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "stream-http": "^3.2.0",
-    "vite-plugin-cloudflare": "workspace:^0.1.1",
     "xhr2": "^0.2.1"
   }
 }
