--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -16,13 +16,14 @@
     "vite-plugin-cloudflare": "./bin/vite-plugin-cloudflare.mjs",
     "vpc": "./bin/vite-plugin-cloudflare.mjs"
   },
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/vite.js",
+  "module": "./dist/vite.js",
+  "types": "./dist/vite.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "import": "./dist/vite.js",
+      "node": "./dist/vite.js",
+      "types": "./dist/vite.d.ts"
     },
     "./shimmed": {
       "import": "./dist/shimmed.js"
@@ -54,9 +55,11 @@
   "devDependencies": {
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@esbuild-plugins/node-resolve": "^0.1.4",
+    "@types/node": "^18.6.3",
+    "@types/node-fetch": "^2.6.2",
     "@types/rollup-plugin-node-builtins": "^2.1.2",
     "@types/rollup-plugin-node-globals": "^1.4.1",
-    "miniflare": "^2.3.0",
+    "miniflare": "^2.6.0",
     "setimmediate": "^1.0.5",
     "typescript": "^4.5.3",
     "vite": "2.7.0",
@@ -74,11 +77,14 @@
     "cac": "^6.7.12",
     "esbuild": "^0.14.6",
     "mlly": "^0.3.16",
+    "modern-node-polyfills": "^0.0.8",
+    "node-fetch": "^2.6.1",
     "picocolors": "^1.0.0",
     "process-es6": "^0.11.6",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
     "stream-http": "^3.2.0",
+    "undici": "^5.8.0",
     "xhr2": "^0.2.1"
   }
 }
