--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -3,13 +3,8 @@
   "version": "0.1.3",
   "type": "module",
   "scripts": {
-    "shim": "pnpm run shim:Buffer && pnpm run shim:process && pnpm run shim:inherits && pnpm run shim:main",
-    "shim:main": " esbuild src/shimmed.ts  --outfile=dist/shimmed.js --bundle --format=cjs --platform=node",
-    "shim:process": " esbuild src/shims/process.ts  --outfile=dist/process.js --format=esm --platform=node",
-    "shim:inherits": " esbuild src/shims/inherits.ts  --outfile=dist/inherits.js --format=esm --platform=node",
-    "shim:Buffer": " esbuild src/shims/Buffer.ts  --outfile=dist/Buffer.js --format=esm --platform=node",
-    "build": "rimraf dist && pnpm run shim && rollup -c",
-    "dev": "pnpm run shim && rollup -c --watch src",
+    "build": "rimraf dist && rollup -c",
+    "dev": "rollup -c --watch src",
     "typecheck": "tsc --noEmit"
   },
   "bin": {
@@ -61,7 +56,6 @@
     "@types/rollup-plugin-node-globals": "^1.4.1",
     "miniflare": "^2.6.0",
     "setimmediate": "^1.0.5",
-    "typescript": "^4.5.3",
     "vite": "2.7.0",
     "vite-plugin-cloudflare": "workspace:^0.1.1"
   },
@@ -77,7 +71,7 @@
     "cac": "^6.7.12",
     "esbuild": "^0.14.6",
     "mlly": "^0.3.16",
-    "modern-node-polyfills": "^0.0.8",
+    "modern-node-polyfills": "^0.0.9",
     "node-fetch": "^2.6.1",
     "picocolors": "^1.0.0",
     "process-es6": "^0.11.6",
