--- a/test/cloudflare-workers-ssr/wrangler.toml
+++ b/test/cloudflare-workers-ssr/wrangler.toml
@@ -1,8 +1,10 @@
 # wrangler.toml
 name = "vite-ssr-worker"
-node_compat = true
+# node_compat = true
+main = "./dist/server/worker.js"
+compatibility_date = "2022-08-10"
 
 [site]
 bucket = "./dist/client"
-entry-point = "./worker/index.js"
+
 
