--- a/examples/vite-plugin-ssr/package.json
+++ b/examples/vite-plugin-ssr/package.json
@@ -28,7 +28,7 @@
     "vite-plugin-ssr": "0.4.18"
   },
   "// Needed for Yarn workspaces": "",
-  "name": "cloudflare-workers",
+  "name": "vite-plugin-ssr",
   "version": "0.0.0",
   "devDependencies": {
     "wrangler": "^2.0.25"
