feat: big breaking change (#13)
* init

* add test

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

* update

--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "pnpm -r --filter {packages} run build",
-    "dev": "pnpm -r --parallel --filter {packages} run dev",
-    "test:core": "vitest -r test/basic",
+    "build": "pnpm -r run --filter=./packages/** build",
+    "test:core": "vitest -r examples/basic",
     "test:all": "cross-env pnpm -r --stream run test --",
-    "test:ci:1": "esmo scripts/miniflare.ts ^1 && cross-env CI=true pnpm -r --stream run test --",
-    "test:ci:2": "esmo scripts/miniflare.ts ^2 && cross-env CI=true pnpm -r --stream run test --",
     "typecheck": "pnpm -r --parallel run typecheck",
     "lint": "echo TODO"
   },
@@ -29,13 +26,13 @@
     "fast-glob": "^3.2.11",
     "kill-port": "^1.6.1",
     "process-es6": "^0.11.6",
-    "puppeteer": "^13.0.0",
+    "puppeteer": "^16.1.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.61.1",
-    "rollup-plugin-dts": "^4.0.1",
+    "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-esbuild": "^4.7.2",
     "shelljs": "^0.8.4",
-    "typescript": "^4.5.3",
+    "typescript": "^4.7.4",
     "utility-types": "^3.10.0",
     "vite": "^2.7.1",
     "vitest": "^0.0.118"
