--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "vitest",
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "NODE_ENV=development vite",
+    "build": "NODE_ENV=production vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -14,5 +14,9 @@
     "typescript": "^4.6.4",
     "vite": "^3.0.0",
     "vite-plugin-cloudflare": "workspace:^0.1.3"
+  },
+  "dependencies": {
+    "@cloudflare/kv-asset-handler": "~0.2.0",
+    "modern-node-polyfills": "^0.0.9"
   }
 }
