fix #15 with making esbuild a peer dep and try catch transformRequest

--- a/examples/basic/wrangler.toml
+++ b/examples/basic/wrangler.toml
@@ -1,4 +1,4 @@
-# wrangler.toml
+# wrangler.toml (https://simple.zorofight94.workers.dev)
 name = "simple"
 main = "./dist/worker.js"
 compatibility_date = "2022-08-10"
