--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -1,15 +1,11 @@
 {
   "name": "vite-plugin-cloudflare",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "type": "module",
   "scripts": {
     "build": "rimraf dist && rollup -c",
     "dev": "rollup -c --watch src",
     "typecheck": "tsc --noEmit"
-  },
-  "bin": {
-    "vite-plugin-cloudflare": "./bin/vite-plugin-cloudflare.mjs",
-    "vpc": "./bin/vite-plugin-cloudflare.mjs"
   },
   "main": "./dist/vite.js",
   "module": "./dist/vite.js",
@@ -48,18 +44,18 @@
   },
   "homepage": "https://github.com/aslemammad/vite-plugin-cloudflare#readme",
   "devDependencies": {
-    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
-    "@esbuild-plugins/node-resolve": "^0.1.4",
     "@types/node": "^18.6.3",
     "@types/node-fetch": "^2.6.2",
     "@types/rollup-plugin-node-builtins": "^2.1.2",
     "@types/rollup-plugin-node-globals": "^1.4.1",
+    "esbuild": "^0.17.5",
     "miniflare": "^2.6.0",
     "setimmediate": "^1.0.5",
-    "vite": "3.0.5",
+    "vite": "4.0.4",
     "vite-plugin-cloudflare": "workspace:^0.1.1"
   },
   "peerDependencies": {
+    "esbuild": "*",
     "miniflare": "*",
     "vite": "*"
   },
@@ -69,7 +65,6 @@
   "dependencies": {
     "buffer-es6": "^4.9.3",
     "cac": "^6.7.12",
-    "esbuild": "^0.14.6",
     "mlly": "^0.3.16",
     "modern-node-polyfills": "^0.0.9",
     "node-fetch": "^2.6.1",
