skip build in dev

--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -51,8 +51,7 @@
     "esbuild": "^0.17.5",
     "miniflare": "^2.6.0",
     "setimmediate": "^1.0.5",
-    "vite": "4.0.4",
-    "vite-plugin-cloudflare": "workspace:^0.1.1"
+    "vite": "4.0.4"
   },
   "peerDependencies": {
     "esbuild": "*",
