--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -12,8 +12,7 @@
   "devDependencies": {
     "miniflare": "^2.6.0",
     "typescript": "^4.6.4",
-    "vite": "^4.0.3",
-    "vite-plugin-cloudflare": "workspace:^0.1.3"
+    "vite": "^4.0.3"
   },
   "dependencies": {
     "@cloudflare/kv-asset-handler": "~0.2.0",
