--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "miniflare": "^2.6.0",
+    "process": "^0.11.10",
     "typescript": "^4.6.4",
     "vite": "^4.0.3"
   },
