--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -13,6 +13,7 @@
     "miniflare": "^2.6.0",
     "process": "^0.11.10",
     "typescript": "^4.6.4",
+    "util": "0.12.5",
     "vite": "^4.0.3"
   },
   "dependencies": {
