--- a/packages/vite-plugin-cloudflare/package.json
+++ b/packages/vite-plugin-cloudflare/package.json
@@ -64,6 +64,7 @@
   "dependencies": {
     "buffer-es6": "^4.9.3",
     "cac": "^6.7.12",
+    "fast-glob": "^3.2.11",
     "mlly": "^0.3.16",
     "modern-node-polyfills": "^0.0.9",
     "node-fetch": "^2.6.1",
